--- a/DOAÇAO.HTML
+++ b/DOAÇAO.HTML
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Doaçao</title>
+    <title>Doação</title>
     <link rel="stylesheet" href="index.css" />
   </head>
 
@@ -11,17 +11,17 @@
     <h3>O que é doar?</h3>
     <p>
       Doação é o ato de transferir bens, vantagens ou quantias a alguém sem
-      receber nada em troca. Pode ser de bens, de órgãos ou de tecidos
+      receber nada em troca.
     </p>
 
     <h3>Como doar?</h3>
     <p>
       primeiro decida a causa e para quem precisa dessa doaçao; escolha com
-      atencao o que doar,
+      atenção o que doar.
     </p>
 
     <h3> O que doar?</h3>
-    <p></p>
+    <p>analisar a situação, e a melhor coisa a se fazer antes de doar qualquer coisa. É possível doar alimentos, roupas, dinheiro, órgãos, tecidos, cabelo, entre outros.</p>
 
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d117054.0398883426!2d-46.7845739521489!3d-23.53470541554249!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1spontos%20de%20doa%C3%A7ao%20em%20osasco!5e0!3m2!1spt-PT!2sbr!4v1742229009230!5m2!1spt-PT!2sbr"
