--- a/DOAÇAO.HTML
+++ b/DOAÇAO.HTML
@@ -8,21 +8,39 @@
   </head>
 
   <body>
-    <h3>O que é doar?</h3>
+
+     <nav>
+                <ul>
+                   
+                    </li>             
+                       <a href="aprenda a reciclar.html">RECICLAGEM</a>
+
+
+    <h3>O que é doar e por que é importante?</h3>
     <p>
-      Doação é o ato de transferir bens, vantagens ou quantias a alguém sem
-      receber nada em troca.
+    Doação é o ato de dar algo a alguém, seja em vida ou após a morte. Pode ser de bens, órgãos, sangue ou até mesmo uma lição aprendida. Doar é um ato de generosidade e solidariedade que beneficia a sociedade como um todo.
     </p>
 
-    <h3>Como doar?</h3>
-    <p>
-      primeiro decida a causa e para quem precisa dessa doaçao; escolha com
-      atenção o que doar.
-    </p>
+    <p>A doação tem o poder de fortalecer os laços comunitários, salvar vidas, pode ajudar a reduzir a desigualdade, promove a empatia e a cooperação e entre outros.</p>
 
-    <h3> O que doar?</h3>
-    <p>analisar a situação, e a melhor coisa a se fazer antes de doar qualquer coisa. É possível doar alimentos, roupas, dinheiro, órgãos, tecidos, cabelo, entre outros.</p>
+    <h3>Como doar com segurança?</h3>
+    <p>pesquisar a instituição</p>
+    <p>verificar a segurança do site de doação</p>
+    <p>Utilizar métodos de pagamento seguros</p>
+    <p>Ficar atento a e-mails e mensagens suspeitas</p>
 
+   <h3>Tipos de Doação</h3>
+
+   <p> Doação em dinheiro (para ONGs, instituições e etc) </p>
+    <p>Doação de alimentos (bancos de alimentos, inicitivas comunitárias)</p>
+    <p>Doação de peças de roupas</p>
+    <p>Doação de órgãos</p>
+    <p>Doação de materiais escolares e brinquedos (impacto na educação infantil.)
+   </p>
+
+
+    <h3>Pontos de doação em Osasco</h3>
+    <div class="mapaGoogle"></div>
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d117054.0398883426!2d-46.7845739521489!3d-23.53470541554249!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1spontos%20de%20doa%C3%A7ao%20em%20osasco!5e0!3m2!1spt-PT!2sbr!4v1742229009230!5m2!1spt-PT!2sbr"
       width="600"
