--- a/RECICLAGEM.HTML
+++ b/RECICLAGEM.HTML
@@ -12,12 +12,12 @@
                 <ul>
                    
                     </li>             
-                       <a href="reciclagem.html">DOAÇOES</a>
+                       <a href="aprenda a doar.html">DOAÇOES</a>
                     
    
 
    
-  <h3>o que e reciclagem</h3>
+  <h3>O que é reciclagem</h3>
 
   <p> A reciclagem é o processo de reaproveitamento de materiais descartados. Seu objetivo é reintroduzi-los na cadeia produtiva a fim de que ainda gerem valor e sejam reutilizados, aumentando a preservação dos recursos naturais e melhorando a qualidade de vida das pessoas.</p>
   
@@ -35,16 +35,18 @@
 
 
 
-    <h3>Resíduos não recicláveis<h3>
+   <h3>Residuos não recicláveis</h3>
 
-    <p> Garrafas, Copos, Embalagens Pet (Refrigerantes, Vinagre, Óleo…), Sacos/Sacolas, Tampas, Frascos de produtos, Caneta (Sem a tinta), Canos e Tubos de PVC, Embalagens de produto de limpeza, Embalagens tipo Tupperware, Brinquedos de plástico, Baldes.</p>
+   <p> Residuos não recicláveis são materiais que não podem ser transformados em novos produtos de forma eficiente. São uma categoria ampla que inclui produtos contaminados, residuos perigosos e outros.</p>
+
+   <p> Exemplos de residuos não recicláveis; restos de comida, pilhas e baterias, caixas de pizzas, embalagens de latas de produtos químicos e tinta, fraldas descartáveis e entre outros.</p>
+
 
     <h3>Ciclo de reciclagem</h3>
 
    <p>O processo de reciclagem começa pela separação dos resíduos pelo seu produtor, passando por um bom gerenciamento da limpeza urbana e terminando nas usinas de reciclagem, onde o material reaproveitável será transformado em nova matéria-prima.</p>
 
-  <iframe src="https://youtu.be/eV4UcOAIP-4"></iframe> 
-
+   <h3>Pontos de reciclagem em Osasco</h3>
 
 <div class="mapaGoogle"></div>
     <iframe
