--- a/RECICLAGEM.HTML
+++ b/RECICLAGEM.HTML
@@ -35,9 +35,9 @@
 
 
 
-   <h3>Residuos não recicláveis</h3>
+   <h3>Resíduos não recicláveis</h3>
 
-   <p> Residuos não recicláveis são materiais que não podem ser transformados em novos produtos de forma eficiente. São uma categoria ampla que inclui produtos contaminados, residuos perigosos e outros.</p>
+   <p> Resíduos não recicláveis são materiais que não podem ser transformados em novos produtos de forma eficiente. São uma categoria ampla que inclui produtos contaminados, residuos perigosos e outros.</p>
 
    <p> Exemplos de residuos não recicláveis; restos de comida, pilhas e baterias, caixas de pizzas, embalagens de latas de produtos químicos e tinta, fraldas descartáveis e entre outros.</p>
 
