--- a/DOAÇAO.HTML
+++ b/DOAÇAO.HTML
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -16,7 +17,7 @@
                        <a href="aprenda a reciclar.html">RECICLAGEM</a>
 
 
-    <h3>O que é doar e por que é importante?</h3>
+    <h3>O que é doar, e por que é importante?</h3>
     <p>
     Doação é o ato de dar algo a alguém, seja em vida ou após a morte. Pode ser de bens, órgãos, sangue ou até mesmo uma lição aprendida. Doar é um ato de generosidade e solidariedade que beneficia a sociedade como um todo.
     </p>
