--- a/DOAÇAO.HTML
+++ b/DOAÇAO.HTML
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -16,29 +15,56 @@
                     </li>             
                        <a href="aprenda a reciclar.html">RECICLAGEM</a>
 
+<h3>O que é doar e por que é importante?</h3>
 
-    <h3>O que é doar, e por que é importante?</h3>
-    <p>
-    Doação é o ato de dar algo a alguém, seja em vida ou após a morte. Pode ser de bens, órgãos, sangue ou até mesmo uma lição aprendida. Doar é um ato de generosidade e solidariedade que beneficia a sociedade como um todo.
-    </p>
+<p>Doar é dar algo para outra pessoa sem querer nada em troca. Pode ser dinheiro, comida, roupas, sangue, órgãos ou até mesmo tempo e atenção. A doação pode acontecer enquanto estamos vivos ou, em alguns casos, depois da morte, como na doação de órgãos.</p> <p>Esse ato simples pode fazer muita diferença: pode salvar vidas, diminuir a pobreza, ajudar pessoas que precisam e incentivar outras pessoas a fazerem o bem. Doar também aproxima as pessoas, ensina a ter mais carinho e motiva outras boas ações.</p>
 
-    <p>A doação tem o poder de fortalecer os laços comunitários, salvar vidas, pode ajudar a reduzir a desigualdade, promove a empatia e a cooperação e entre outros.</p>
+<h3>Como doar com segurança?</h3>
 
-    <h3>Como doar com segurança?</h3>
-    <p>pesquisar a instituição</p>
-    <p>verificar a segurança do site de doação</p>
-    <p>Utilizar métodos de pagamento seguros</p>
-    <p>Ficar atento a e-mails e mensagens suspeitas</p>
+<p>Para ter certeza de que sua doação vai realmente ajudar, é bom seguir alguns cuidados:</p>
 
-   <h3>Tipos de Doação</h3>
+ <ul> <li><strong>Pesquise a organização:</strong> veja se ela é séria e se o trabalho dela é confiável.</li>
+  
+  <li><strong>Confira o site oficial:</strong> sites seguros começam com "https://" e mostram informações claras.</li> 
+  
+  <li><strong>Use formas de pagamento seguras:</strong> como transferência, PIX com nome certo ou sites conhecidos.</li> 
+  
+  <li><strong>Desconfie de mensagens estranhas:</strong> e-mails ou mensagens que pedem dinheiro com pressa podem ser falsos.</li>
 
-   <p> Doação em dinheiro (para ONGs, instituições e etc) </p>
-    <p>Doação de alimentos (bancos de alimentos, inicitivas comunitárias)</p>
-    <p>Doação de peças de roupas</p>
-    <p>Doação de órgãos</p>
-    <p>Doação de materiais escolares e brinquedos (impacto na educação infantil.)
-   </p>
+</ul>
 
+<h3>Tipos de Doação</h3>
+
+<ul> <li><strong>Doação em dinheiro:</strong> ajuda grupos e projetos a continuarem fazendo seu trabalho.</li>
+  
+  <li><strong>Doação de alimentos:</strong> ajuda a matar a fome de quem não tem o que comer.</li>
+  
+  <li><strong>Doação de roupas:</strong> roupas em bom estado podem aquecer e vestir quem precisa.</li> 
+  
+  <li><strong>Doação de órgãos:</strong> pode salvar até 8 pessoas. É importante falar com a família sobre esse desejo.</li> 
+  
+  <li><strong>Doação de sangue:</strong> é segura, rápida e pode salvar até 4 pessoas.</li>
+  
+  <li><strong>Doação de brinquedos e material escolar:</strong> ajuda crianças a aprender e se divertir, aumentando a alegria e confiança delas.</li> 
+
+</ul>
+<h3>Datas especiais para doar</h3>
+
+<p>Durante o ano, existem dias especiais que incentivam a doação e ajudam a lembrar a importância de ajudar o próximo.</p> 
+
+<ul> <li><strong>Dia de Doar (novembro):</strong> um dia no mundo todo para lembrar as pessoas de ajudar quem precisa.</li>
+  
+  <li><strong>Campanhas de inverno:</strong> juntam roupas e cobertores para quem sente frio nas ruas.</li> 
+  
+  <li><strong>Campanhas de Natal:</strong> juntam brinquedos, roupas e comida para famílias carentes.</li> 
+  
+  <li><strong>Volta às aulas:</strong> juntam cadernos, mochilas e lápis para ajudar crianças a estudarem.</li> 
+  
+  <li><strong>Ajuda em emergências:</strong> como em enchentes e incêndios, quando as pessoas perdem tudo e precisam de ajuda urgente.</li> 
+
+</ul> 
+
+<p>Esses momentos são ótimas chances para fazer o bem. Mesmo uma pequena doação pode mudar a vida de alguém.</p>
 
     <h3>Pontos de doação em Osasco</h3>
     <div class="mapaGoogle"></div>
