--- a/DOAÇAO.HTML
+++ b/DOAÇAO.HTML
@@ -13,56 +13,29 @@
                 <ul>
                    
                     </li>             
-                       <a href="aprenda a reciclar.html">RECICLAGEM</a>
+                       <a href="RECICLAGEM.html">RECICLAGEM</a>
 
-<h3>O que é doar e por que é importante?</h3>
+<h3>O QUE É DOAR?</h3>
 
-<p>Doar é dar algo para outra pessoa sem querer nada em troca. Pode ser dinheiro, comida, roupas, sangue, órgãos ou até mesmo tempo e atenção. A doação pode acontecer enquanto estamos vivos ou, em alguns casos, depois da morte, como na doação de órgãos.</p> <p>Esse ato simples pode fazer muita diferença: pode salvar vidas, diminuir a pobreza, ajudar pessoas que precisam e incentivar outras pessoas a fazerem o bem. Doar também aproxima as pessoas, ensina a ter mais carinho e motiva outras boas ações.</p>
+<P> A doação é o ato pelo qual uma pessoa transfere bens ou vantagens para outra, geralmente por mera liberalidade, isto é, sem a exigência do cumprimento de condições como contrapartida.
+ Em outras palavras, a doação pode ser conceituada como um contrato em que um agente, plenamente capaz, transfere o seu patrimônio para outra, sem pedir nenhum pagamento em troca</P>
 
-<h3>Como doar com segurança?</h3>
 
-<p>Para ter certeza de que sua doação vai realmente ajudar, é bom seguir alguns cuidados:</p>
 
- <ul> <li><strong>Pesquise a organização:</strong> veja se ela é séria e se o trabalho dela é confiável.</li>
-  
-  <li><strong>Confira o site oficial:</strong> sites seguros começam com "https://" e mostram informações claras.</li> 
-  
-  <li><strong>Use formas de pagamento seguras:</strong> como transferência, PIX com nome certo ou sites conhecidos.</li> 
-  
-  <li><strong>Desconfie de mensagens estranhas:</strong> e-mails ou mensagens que pedem dinheiro com pressa podem ser falsos.</li>
+<h3>TIPOS DE DOAÇAO</h3>
 
-</ul>
+<p>   Doação pura - é feita por simples doação, ou seja, sem qualquer condição presente ou futura, bem como sem encargos, sem termos, sem restrições ou modificações;
+  Doação com encargo - é aquela em que o doador impõe ao donatário uma incumbência em seu benefício, em proveito de terceiro ou do interesse geral;
+  Doação condicional - é a que surte efeitos somente a partir da implementação de uma condição, ou seja, é a que depende de uma ação futura e incerta;
+  Doação modal - é quando uma pessoa doa os recursos para que outra pessoa compre um determinado bem. É possível haver dois tributos, pois há dois fatos geradores: o ITCMD para a doação e o ITBI para a compra e venda.</p>
 
-<h3>Tipos de Doação</h3>
+  <P>No Brasil, o Dia de Doar foi realizado pela primeira vez em 2013, um ano depois da primeira edição, nos Estados Unidos, em 2012. A partir de 2014 o Brasil passou a fazer parte do movimento global, que hoje conta com mais de 90 países participando oficialmente.</P>
 
-<ul> <li><strong>Doação em dinheiro:</strong> ajuda grupos e projetos a continuarem fazendo seu trabalho.</li>
-  
-  <li><strong>Doação de alimentos:</strong> ajuda a matar a fome de quem não tem o que comer.</li>
-  
-  <li><strong>Doação de roupas:</strong> roupas em bom estado podem aquecer e vestir quem precisa.</li> 
-  
-  <li><strong>Doação de órgãos:</strong> pode salvar até 8 pessoas. É importante falar com a família sobre esse desejo.</li> 
-  
-  <li><strong>Doação de sangue:</strong> é segura, rápida e pode salvar até 4 pessoas.</li>
-  
-  <li><strong>Doação de brinquedos e material escolar:</strong> ajuda crianças a aprender e se divertir, aumentando a alegria e confiança delas.</li> 
 
-</ul>
 <h3>Datas especiais para doar</h3>
 
-<p>Durante o ano, existem dias especiais que incentivam a doação e ajudam a lembrar a importância de ajudar o próximo.</p> 
-
-<ul> <li><strong>Dia de Doar (novembro):</strong> um dia no mundo todo para lembrar as pessoas de ajudar quem precisa.</li>
-  
-  <li><strong>Campanhas de inverno:</strong> juntam roupas e cobertores para quem sente frio nas ruas.</li> 
-  
-  <li><strong>Campanhas de Natal:</strong> juntam brinquedos, roupas e comida para famílias carentes.</li> 
-  
-  <li><strong>Volta às aulas:</strong> juntam cadernos, mochilas e lápis para ajudar crianças a estudarem.</li> 
-  
-  <li><strong>Ajuda em emergências:</strong> como em enchentes e incêndios, quando as pessoas perdem tudo e precisam de ajuda urgente.</li> 
-
-</ul> 
+<P> No Brasil, o Dia de Doar foi realizado pela primeira vez em 2013, um ano depois da primeira edição, nos Estados Unidos, em 2012. A partir de 2014 o Brasil passou a fazer parte do movimento global, que hoje conta com mais de 90 países participando oficialmente.
+  Existem várias datas importantes para incentivar doações. O Dia de Doar, comemorado em 3 de dezembro, é um movimento global que promove a cultura da doação. Outra data relevante é o Dia Mundial do Doador de Sangue, celebrado em 14 de junho, que visa conscientizar sobre a importância da doação de sangue. Há também o Dia Nacional do Doador de Sangue, que ocorre em 25 de novembro.</P>
 
 <p>Esses momentos são ótimas chances para fazer o bem. Mesmo uma pequena doação pode mudar a vida de alguém.</p>
 
