--- a/DOAÇAO.HTML
+++ b/DOAÇAO.HTML
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Doação</title>
+    <title>DOAÇÂO</title>
     <link rel="stylesheet" href="index.css" />
   </head>
 
@@ -36,6 +36,40 @@
 
 <P> No Brasil, o Dia de Doar foi realizado pela primeira vez em 2013, um ano depois da primeira edição, nos Estados Unidos, em 2012. A partir de 2014 o Brasil passou a fazer parte do movimento global, que hoje conta com mais de 90 países participando oficialmente.
   Existem várias datas importantes para incentivar doações. O Dia de Doar, comemorado em 3 de dezembro, é um movimento global que promove a cultura da doação. Outra data relevante é o Dia Mundial do Doador de Sangue, celebrado em 14 de junho, que visa conscientizar sobre a importância da doação de sangue. Há também o Dia Nacional do Doador de Sangue, que ocorre em 25 de novembro.</P>
+
+
+  <h3>ESTADO DA DOAÇAO</h3>
+
+  <p>
+    Para que uma doação seja válida e segura, ela deve estar em conformidade com alguns requisitos legais e práticos. Segundo as principais plataformas de doação online, como Vakinha, Para Quem Doar e Doare, a doação deve ser realizada de forma voluntária, sem coação ou pressão, e o doador precisa estar em pleno gozo de suas capacidades civis, ou seja, ser maior de idade e capaz de responder por seus atos. Além disso, a doação deve ser feita de maneira transparente, com informações claras sobre o destino dos recursos e a finalidade da campanha ou instituição beneficiada.
+    </p>
+    <p>
+    É importante que o doador confira se a organização ou campanha é confiável, verificando dados como CNPJ, histórico de atuação e canais de contato. A doação deve ser registrada, preferencialmente por meio de comprovantes eletrônicos, garantindo a rastreabilidade e a segurança da transação. Em alguns casos, especialmente para doações de bens de maior valor, pode ser necessário formalizar a doação por meio de um contrato ou escritura pública, conforme previsto na legislação brasileira.
+    </p>
+    <p>
+    Portanto, a doação deve estar em um estado de legalidade, transparência e boa-fé, respeitando tanto a vontade do doador quanto os direitos do beneficiário, para que cumpra seu papel social de promover o bem-estar e a solidariedade.
+    </p>
+
+
+  <h3>COMO DOAR ONLINE</h3>
+
+  <P>Para doar online, primeiro escolha a organização ou causa que deseja apoiar, seja uma instituição filantrópica, uma campanha específica ou um projeto individual. Em seguida, acesse a plataforma de doação, que pode estar disponível no site da própria organização ou em plataformas como Vakinha, Para Quem Doar ou Doare. Depois, selecione a forma de doação, optando entre cartão de crédito, Pix, boleto bancário ou transferência bancária. Preencha as informações necessárias, como o valor e os dados do pagamento. Por fim, confira todos os dados e finalize a doação.</P>
+
+  <h3>TIPOS DE DOAÇOES</h3>
+  <p>
+    Doação pura – é feita por simples doação, ou seja, sem qualquer condição presente ou futura, bem como sem encargos, termos, restrições ou modificações.<br>
+    Doação com encargo – ocorre quando o doador impõe ao donatário uma incumbência em seu benefício, em proveito de terceiro ou do interesse geral.<br>
+    Doação condicional – é aquela que só surte efeitos a partir da implementação de uma condição, ou seja, depende de uma ação futura e incerta.<br>
+    Doação modal – acontece quando uma pessoa doa recursos para que outra adquira um determinado bem. Nesse caso, podem incidir dois tributos: o ITCMD para a doação e o ITBI para a compra e venda.
+  </p>
+
+
+  <h3>POR QUE É IMPORTANTE DOAR ONLINE?</h3>
+
+  <p>Doar online é importante porque representa uma forma eficiente, acessível e segura de apoiar causas e organizações sem fins lucrativos. Com o avanço da tecnologia, as plataformas digitais tornaram o processo de doação mais simples e rápido, permitindo que qualquer pessoa, com apenas alguns cliques, contribua para iniciativas sociais, ambientais, educacionais, de saúde, entre outras.</p>
+
+  <p>Além disso, a doação online amplia significativamente o alcance das campanhas, permitindo que organizações recebam apoio de pessoas em diferentes regiões do país ou até do mundo. Isso fortalece projetos que promovem mudanças reais na vida de comunidades e indivíduos.</p>
+
 
 <p>Esses momentos são ótimas chances para fazer o bem. Mesmo uma pequena doação pode mudar a vida de alguém.</p>
 
