--- a/RECICLAGEM.HTML
+++ b/RECICLAGEM.HTML
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>aprenda a reciclar</title>
+    <title>RECICLAGEM</title>
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
@@ -41,11 +41,18 @@
 <p>são os materiais que não podem ser processados para serem transformados em novos produtos de forma eficiente e com o custo-benefício viável. São exemplos: papel plastificado, bitucas de cigarro, papel higiênico, esponja de aço, embalagens metálicas contaminadas, produtos químicos, resíduos orgânicos como restos de comida</p>
 
 
+<h3>RESÍDUOS COMUNS</h3>
+
+<P>Resíduos comuns, também conhecidos como resíduos sólidos urbanos ou resíduos domiciliares, são aqueles que não apresentam riscos à saúde ou ao meio ambiente e são produzidos em residências, comércio, serviços e áreas administrativas. Eles incluem materiais como sobras de alimentos, embalagens, papéis, papelões, plásticos, vidros, entre outros.</P>
+
+<P>Resíduos comuns são resíduos domésticos e similares, como restos de comida, Cascas de frutas e vegetais, embalagens, papéis, plásticos, que geralmente são descartados pelas residências e empresas. Estes resíduos são tipicamente enviados para aterros sanitários ou destinados à reciclagem e compostagem.</P>
+
+<P>Restos de alimentos, cascas de frutas e legumes, folhas, galhos, grama, jornais, revistas, papelão, garrafas PET, sacolas plásticas, latas de alumínio e aço, garrafas e potes de vidro, copos e talheres descartáveis, frascos de shampoo e produtos de limpeza, medicamentos vencidos, pilhas e baterias, lâmpadas fluorescentes, fraldas descartáveis, papel higiênico usado, espelhos, cerâmica, porcelana, bitucas de cigarro, esponjas de limpeza, computadores, celulares, cabos, televisores, eletrodomésticos e entulho (cimento, tijolos, concreto).<P>
+
+
 <h3>RESÍDUOS ESPECIAIS</h3>
 
 <p>Resíduos especiais, também conhecidos como resíduos perigosos, são aqueles que precisam de um tratamento especial devido à sua composição química ou periculosidade para a saúde e o meio ambiente. Não devem ser descartados como lixo comum ou reciclável.</p>
-
-<h3>LISTA DE RESÍDUOS ESPECIAIS</h3>
 
 <p>Incluem itens como lâmpadas fluorescentes, pilhas e baterias, medicamentos, óleo de cozinha, eletrônicos, e resíduos de serviços de saúde.  O descarte correto desses resíduos é fundamental para evitar a contaminação e garantir um tratamento adequado</p>
 
@@ -66,9 +73,25 @@
 
 
 
+    <h3>CICLO DE RESIDUOS ESPECIAIS</h3>
+
+    <P>O ciclo de gestão de resíduos, especialmente os resíduos especiais, envolve várias etapas cruciais para garantir a sua correta destinação e minimizar o impacto ambiental. Começa com a coleta, passa pelo transporte e tratamento, e termina com a destinação final ou disposição ambiental.</P>
+
+
+    <h3>ETAPAS DO CICLO</h3>
+
+    <p>Identificação e Classificação – Determina a origem e o tipo de resíduo (ex: hospitalar, industrial, químico).
+        Coleta e Transporte – Feita por empresas especializadas até locais adequados.
+        Tratamento – Aplicação de métodos como incineração, desinfecção ou esterilização para reduzir riscos.
+        Destinação Final – Pode incluir reciclagem, reaproveitamento ou envio a aterros apropriados.
+        Disposição Ambiental Segura – Resíduos não aproveitáveis são depositados em aterros especiais, com controle ambiental.</p>
+
+
+
 <h3>CICLO DA RECICLAGEM</h3>
 
 <p>Este ciclo começa com a coleta seletiva, que separa os resíduos recicláveis, como papel, plástico, vidro e metal. Em seguida, os materiais são transportados para centros de reciclagem, onde são processados para que possam ser reutilizados. Finalmente, os materiais reciclados são usados para produzir novos produtos, fechando o ciclo.</p>
+
 
    <h3>PONTOS DE RECICLAGEM EM OSASCO</h3>
 
