--- a/RECICLAGEM.HTML
+++ b/RECICLAGEM.HTML
@@ -93,6 +93,16 @@
 <p>Este ciclo começa com a coleta seletiva, que separa os resíduos recicláveis, como papel, plástico, vidro e metal. Em seguida, os materiais são transportados para centros de reciclagem, onde são processados para que possam ser reutilizados. Finalmente, os materiais reciclados são usados para produzir novos produtos, fechando o ciclo.</p>
 
 
+<!-- Adicione este código onde quiser exibir o chatbot, por exemplo, no final do <body> -->
+  <div id="chatbot-container" style="position: fixed; bottom: 20px; right: 20px; width: 300px;">
+    <div id="chatbot" style="background: #f5f5f5; border: 1px solid #ccc; border-radius: 10px; padding: 10px;">
+      <div id="chatbot-messages" style="height: 200px; overflow-y: auto; font-size: 14px;"></div>
+      <input id="chatbot-input" type="text" placeholder="Digite sua dúvida..." style="width: 80%;" />
+      <button onclick="enviarMensagem()" style="width: 18%;">Enviar</button>
+    </div>
+  </div>
+  
+
    <h3>PONTOS DE RECICLAGEM EM OSASCO</h3>
 
 <div class="mapaGoogle"></div>
