--- a/RECICLAGEM.HTML
+++ b/RECICLAGEM.HTML
@@ -43,11 +43,24 @@
 
 <h3>RESÍDUOS COMUNS</h3>
 
-<P>Resíduos comuns, também conhecidos como resíduos sólidos urbanos ou resíduos domiciliares, são aqueles que não apresentam riscos à saúde ou ao meio ambiente e são produzidos em residências, comércio, serviços e áreas administrativas. Eles incluem materiais como sobras de alimentos, embalagens, papéis, papelões, plásticos, vidros, entre outros.</P>
+<P>Os resíduos comuns incluem materiais descartados por residências e empresas, que muitas vezes vão para aterros sanitários ou são reciclados. Exemplos incluem:</P>
 
-<P>Resíduos comuns são resíduos domésticos e similares, como restos de comida, Cascas de frutas e vegetais, embalagens, papéis, plásticos, que geralmente são descartados pelas residências e empresas. Estes resíduos são tipicamente enviados para aterros sanitários ou destinados à reciclagem e compostagem.</P>
-
-<P>Restos de alimentos, cascas de frutas e legumes, folhas, galhos, grama, jornais, revistas, papelão, garrafas PET, sacolas plásticas, latas de alumínio e aço, garrafas e potes de vidro, copos e talheres descartáveis, frascos de shampoo e produtos de limpeza, medicamentos vencidos, pilhas e baterias, lâmpadas fluorescentes, fraldas descartáveis, papel higiênico usado, espelhos, cerâmica, porcelana, bitucas de cigarro, esponjas de limpeza, computadores, celulares, cabos, televisores, eletrodomésticos e entulho (cimento, tijolos, concreto).<P>
+<ul>
+  <li>Restos de alimentos e cascas de frutas</li>
+  <li>Folhas, galhos e grama</li>
+  <li>Papéis, como jornais e papelão</li>
+  <li>Plásticos, como garrafas PET e sacolas</li>
+  <li>Latas de alumínio e aço</li>
+  <li>Vidros, como garrafas e potes</li>
+  <li>Copos e talheres descartáveis</li>
+  <li>Frascos de produtos de limpeza</li>
+  <li>Medicamentos vencidos, pilhas e baterias</li>
+  <li>Lâmpadas fluorescentes e fraldas descartáveis</li>
+  <li>Espelhos, cerâmica e porcelana</li>
+  <li>Bitucas de cigarro e esponjas de limpeza</li>
+  <li>Eletroeletrônicos (computadores, celulares, TVs)</li>
+  <li>Entulhos (cimento, tijolos, concreto)</li>
+</ul>
 
 
 <h3>RESÍDUOS ESPECIAIS</h3>
@@ -93,15 +106,6 @@
 <p>Este ciclo começa com a coleta seletiva, que separa os resíduos recicláveis, como papel, plástico, vidro e metal. Em seguida, os materiais são transportados para centros de reciclagem, onde são processados para que possam ser reutilizados. Finalmente, os materiais reciclados são usados para produzir novos produtos, fechando o ciclo.</p>
 
 
-<!-- Adicione este código onde quiser exibir o chatbot, por exemplo, no final do <body> -->
-  <div id="chatbot-container" style="position: fixed; bottom: 20px; right: 20px; width: 300px;">
-    <div id="chatbot" style="background: #f5f5f5; border: 1px solid #ccc; border-radius: 10px; padding: 10px;">
-      <div id="chatbot-messages" style="height: 200px; overflow-y: auto; font-size: 14px;"></div>
-      <input id="chatbot-input" type="text" placeholder="Digite sua dúvida..." style="width: 80%;" />
-      <button onclick="enviarMensagem()" style="width: 18%;">Enviar</button>
-    </div>
-  </div>
-  
 
    <h3>PONTOS DE RECICLAGEM EM OSASCO</h3>
 
