--- a/DOAÇAO.HTML
+++ b/DOAÇAO.HTML
@@ -24,15 +24,19 @@
 
 <h3>TIPOS DE DOAÇAO</h3>
 
-<p>   Doação pura - é feita por simples doação, ou seja, sem qualquer condição presente ou futura, bem como sem encargos, sem termos, sem restrições ou modificações;
-  Doação com encargo - é aquela em que o doador impõe ao donatário uma incumbência em seu benefício, em proveito de terceiro ou do interesse geral;
-  Doação condicional - é a que surte efeitos somente a partir da implementação de uma condição, ou seja, é a que depende de uma ação futura e incerta;
-  Doação modal - é quando uma pessoa doa os recursos para que outra pessoa compre um determinado bem. É possível haver dois tributos, pois há dois fatos geradores: o ITCMD para a doação e o ITBI para a compra e venda.</p>
+<p> Doação Pura: Transferência de bens sem condições, encargos ou restrições. O donatário recebe livremente.</p>
 
-  <P>No Brasil, o Dia de Doar foi realizado pela primeira vez em 2013, um ano depois da primeira edição, nos Estados Unidos, em 2012. A partir de 2014 o Brasil passou a fazer parte do movimento global, que hoje conta com mais de 90 países participando oficialmente.</P>
+<p> *Doação com Encargo*: O doador impõe uma obrigação ao donatário, que deve realizar algo em benefício do doador, de terceiros ou do interesse público.</p>
+
+<p>Doação Condicional*: A doação só é efetivada se uma condição específica for cumprida no futuro, ou seja, depende de um evento incerto.
+</p>
+
+<p> *Doação Modal*: O doador fornece recursos para que o donatário compre um bem específico. Neste caso, podem ocorrer dois tributos: ITCMD (Imposto sobre Transmissão Causa Mortis e Doação) pela doação e ITBI (Imposto sobre Transmissão de Bens Imóveis) pela compra.
+</p>
 
 
-<h3>Datas especiais para doar</h3>
+
+<h3>DATAS ESPECIAIS PARA DOAR</h3>
 
 <P> No Brasil, o Dia de Doar foi realizado pela primeira vez em 2013, um ano depois da primeira edição, nos Estados Unidos, em 2012. A partir de 2014 o Brasil passou a fazer parte do movimento global, que hoje conta com mais de 90 países participando oficialmente.
   Existem várias datas importantes para incentivar doações. O Dia de Doar, comemorado em 3 de dezembro, é um movimento global que promove a cultura da doação. Outra data relevante é o Dia Mundial do Doador de Sangue, celebrado em 14 de junho, que visa conscientizar sobre a importância da doação de sangue. Há também o Dia Nacional do Doador de Sangue, que ocorre em 25 de novembro.</P>
