--- a/DOAÇAO.HTML
+++ b/DOAÇAO.HTML
@@ -91,6 +91,17 @@
     ></iframe>
 
 
+   <h3>Links de doações online</h3>
+
+   <a href="https://bancodealimentos.colabore.org/sabedoria-popular/single_step?utm_campaign=pf&utm_medium=botao&utm_source=site" target="_blank">BANCO DE ALIMENTOS</a>
+    
+
+   <p>Banco de Alimentos - É um grande site de doações que trabalha com alimentos fresco para pessoas que estão em situação de vulnerabilidade </p>
+
+
+   
+
+
 
     
 
