--- a/RECICLAGEM.HTML
+++ b/RECICLAGEM.HTML
@@ -29,7 +29,7 @@
     <ul class="barra-botoes">
       <li><a href="DOAÇAO.html">DOAÇÕES</a></li>
       <li><button id="acessibilidadeToggle">Modo Acessível</button>
-      <a href="#mapaGoogle">PONTOS DE COLETA PROXIMOS</a></li>
+      <a href="#mapid">PONTOS DE COLETA PROXIMOS</a></li>
     </ul>
   </nav>
 
@@ -347,7 +347,6 @@
 
   <!-- Aqui vai aparecer o mapa -->
 
-  <div id="mapaGoogle"></div>
   <div id="mapid"></div>
 
 
