--- a/RECICLAGEM.HTML
+++ b/RECICLAGEM.HTML
@@ -33,7 +33,7 @@
   <nav>
 <nav>
   <ul class="barra-botoes">
-    <li><a href="DOACAO.html">DOAÇÕES</a></li>
+    <li><a href="DOAÇAO.html">DOAÇÕES</a></li>
     <li><a href="#mapid">PONTOS DE COLETA PRÓXIMOS</a></li>
     <li class="acessibilidade-li"><button id="acessibilidadeToggle">MODO ACESSÍVEL</button></li>
   </ul>
